data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3582.wast
;; 1. **Invalid Function Index**:    - **Test Description**: Call a function using an index that is beyond the available functions in the module.    - **Constraint Checked**: Function index validity (`funcidx` out-of-bounds).    - **CFG Relevance**: Ensures the control flow does not accidentally jump to an undefined function, leading to inconsistent CFG states.

(assert_invalid
  (module
    (func $f1 (param i32) (result i32) (i32.add (local.get 0) (i32.const 1)))
    (func $f2 (call 5 (i32.const 10))) ; Invalid function index 5
  )
  "unknown function index"
)